@@ -744,6 +744,14 @@
 							<label2>[COLOR=ff000000]$INFO[system.addontitle(Skin.String(LyricScript_Path))][/COLOR]</label2>
 							<onclick>Skin.SetAddon(LyricScript_Path,xbmc.python.lyrics)</onclick>
 						</control>
+						<control type="radiobutton" id="7012">
+							<width>1210</width>
+							<include>SettingsCategoryRadioButtonVars</include>
+							<selected>Skin.HasSetting(lyrics.autorun)</selected>
+							<onclick>Skin.ToggleSetting(lyrics.autorun)</onclick>
+							<label>$LOCALIZE[42443]</label>
+							<visible>!IsEmpty(Skin.String(LyricScript_Path))</visible>
+						</control>
 						<control type="radiobutton" id="7005">
 							<width>1210</width>
 							<include>SettingsCategoryRadioButtonVars</include>
