@@ -106,3 +106,5 @@ fixed dialogslider wrong path for git
 Added option for simplified seek bar
 OSD only shows info on pressing up or info button
 Fixed volume colours for dark theme.
+Added option to start lyrics automatically
+Updated lyrics to look similar to scrolling music vis text
